todo-app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: shared-log
          persistentVolumeClaim:
            claimName: todo-app-claim
      containers:
        - name: todo-app-frontend
          image: teemukoivumaa/todo-app:1.0
          imagePullPolicy: Always
          volumeMounts:
          - name: shared-log
            mountPath: /usr/src/app/files
        - name: todo-app-backend
          image: teemukoivumaa/todo-backend:1.0
          imagePullPolicy: Always
