todo-app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-svc
spec:
  type: ClusterIP
  selector:
    app: todo-app
  ports:
    - port: 2345 # Ingress port
      protocol: TCP
      targetPort: 8080 # App port
